maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: illegal start of simple expression
    while (!estSurBiscuit()) {
    ^